# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  .renovaterc.json  Dockerfile  README.md  justfile  pyproject.toml
.github/actions/check/: action.yml
.github/actions/init-build/: action.yml
.github/actions/init-docker/: action.yml
.github/workflows/: ci.yml  release.yml
hooks/: commit-msg-check  commit-msg-restore  lint-shell  style-java  style-kotlin  style-markdown  style-php  style-shell  style-xml  style-yaml
tests/: assertions.py  conftest.py  filecheck_hook.py  test_commit_msg_check.py  test_commit_msg_restore.py  test_lint_makefile_suspicious_continuations.py  test_lint_makefile_suspicious_lines.py  test_lint_shell.py  test_style_java.py  test_style_json.py  test_style_kotlin.py  test_style_markdown.py  test_style_php.py  test_style_shell.py  test_style_xml.py  test_style_yaml.py  utils.py
